@@ -171,6 +171,8 @@
         <ruleset.basedir>${project.basedir}</ruleset.basedir>
         <archunit.version>0.9.3</archunit.version>
 
+        <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
+
         <!--Sonar -->
 
         <sonar.core.coveragePlugin>jacoco</sonar.core.coveragePlugin>
@@ -547,6 +549,12 @@
                 <artifactId>jaxb-api</artifactId>
                 <version>${jaxb-api.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-jdk8</artifactId>
+                <version>${org.mapstruct.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -599,6 +607,25 @@ Use it manually to generate javadocs. Don't commit it
 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${org.mapstruct.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
@@ -641,6 +668,10 @@ Use it manually to generate javadocs. Don't commit it
                     </rulesets>
                     <failOnViolation>true</failOnViolation>
                     <printFailingErrors>true</printFailingErrors>
+                    <excludeRoots>
+                        <excludeRoot>../xs2a-impl/target/generated-sources/annotations/
+                        </excludeRoot>
+                    </excludeRoots>
                 </configuration>
             </plugin>
             <plugin>
