@@ -28,7 +28,7 @@ public abstract class SpiPaymentInitiationResponse {
     private TransactionStatus transactionStatus;
     private String paymentId;
     private SpiAmount spiTransactionFees;
-    private boolean spiTransactionFeeIndicator;
+    private Boolean spiTransactionFeeIndicator;
     private boolean multilevelScaRequired;
     private List<String> scaMethods;
     // TODO Make extendable list of scaMethods https://git.adorsys.de/adorsys/xs2a/aspsp-xs2a/issues/411
