@@ -1,7 +1,7 @@
 {
   "transactionStatus": "RCVD",
   "paymentId": "DfLtDOgo1tTK6WQlHlb-TMPL2pkxRlhZ4feMa5F4tOWwNN45XLNAVfWwoZUKlQwb_=_bS6p6XvTWI",
-  "transactionFeeIndicator": false,
+  "transactionFeeIndicator": true,
   "_links": {
     "self": {
       "href": "http://localhost/v1/bulk-payments/sepa-credit-transfers/DfLtDOgo1tTK6WQlHlb-TMPL2pkxRlhZ4feMa5F4tOWwNN45XLNAVfWwoZUKlQwb_=_bS6p6XvTWI"
