@@ -1,7 +1,7 @@
 {
   "transactionStatus": "RCVD",
   "paymentId": "DfLtDOgo1tTK6WQlHlb-TMPL2pkxRlhZ4feMa5F4tOWwNN45XLNAVfWwoZUKlQwb_=_bS6p6XvTWI",
-  "transactionFeeIndicator": false,
+  "transactionFeeIndicator": true,
   "_links": {
     "scaRedirect": {
       "href": "http://localhost:4200/pis/e8356ea7-8e3e-474f-b5ea-2b89346cb2dc/"
