@@ -61,7 +61,7 @@ public abstract class ScaPaymentService implements ScaApproachServiceTypeProvide
             return new SinglePaymentInitiationResponse(spiErrorMapper.mapToErrorHolder(spiResponse, ServiceType.PIS));
         }
 
-        return spiToXs2aPaymentMapper.mapToPaymentInitiateResponse(spiResponse.getPayload(), SinglePaymentInitiationResponse::new, spiResponse.getAspspConsentData());
+        return spiToXs2aPaymentMapper.mapToPaymentInitiateResponse(spiResponse.getPayload(), spiResponse.getAspspConsentData());
     }
 
     public PeriodicPaymentInitiationResponse createPeriodicPayment(PeriodicPayment payment, TppInfo tppInfo, String paymentProduct, PsuIdData psuIdData) {
@@ -73,7 +73,7 @@ public abstract class ScaPaymentService implements ScaApproachServiceTypeProvide
             return new PeriodicPaymentInitiationResponse(spiErrorMapper.mapToErrorHolder(spiResponse, ServiceType.PIS));
         }
 
-        return spiToXs2aPaymentMapper.mapToPaymentInitiateResponse(spiResponse.getPayload(), PeriodicPaymentInitiationResponse::new, spiResponse.getAspspConsentData());
+        return spiToXs2aPaymentMapper.mapToPaymentInitiateResponse(spiResponse.getPayload(), spiResponse.getAspspConsentData());
     }
 
     public BulkPaymentInitiationResponse createBulkPayment(BulkPayment bulkPayment, TppInfo tppInfo, String paymentProduct, PsuIdData psuIdData) {
@@ -85,7 +85,7 @@ public abstract class ScaPaymentService implements ScaApproachServiceTypeProvide
             return new BulkPaymentInitiationResponse(spiErrorMapper.mapToErrorHolder(spiResponse, ServiceType.PIS));
         }
 
-        return spiToXs2aPaymentMapper.mapToPaymentInitiateResponse(spiResponse.getPayload(), BulkPaymentInitiationResponse::new, spiResponse.getAspspConsentData());
+        return spiToXs2aPaymentMapper.mapToPaymentInitiateResponse(spiResponse.getPayload(), spiResponse.getAspspConsentData());
     }
 
     public CommonPaymentInitiationResponse createCommonPayment(CommonPayment payment, TppInfo tppInfo, String paymentProduct, PsuIdData psuIdData) {
