@@ -1,0 +1,7 @@
+{
+  "aspspAccountId": "26bb59a3-2f63-4027-ad38-67d87e59611a",
+  "transactionStatus": "RCVD",
+  "paymentId": "2Cixxv85Or_qoBBh_d7VTZC0M8PwzR5IGzsJuT-jYHNOMR1D7n69vIF46RgFd7Zn_=_bS6p6XvTWI",
+  "spiTransactionFeeIndicator": false,
+  "multilevelScaRequired": true
+}
